--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,137 @@
+setuptools>=70.0
+wheel>=0.41
+
+# Core Telegram Bot Framework
 python-telegram-bot[all]==20.7
+python-telegram-bot[rate-limiter]==20.7
+
+# Text-to-Speech Engine
 edge-tts==7.2.3
+
+# Async File Operations
 aiofiles==23.2.1
-ebooklib==0.18
-beautifulsoup4==4.12.2
-PyPDF2==3.0.1
+asyncio-throttle==1.0.2
+
+# AI and NLP
+openai==1.3.8
+tiktoken==0.5.2
+
+# Audio Processing
 pydub==0.25.1
+mutagen==1.47.0
+
+# File Format Support
+PyPDF2==3.0.1
+pypdf>=3.0.0
+pdfplumber==0.9.0
+ebooklib==0.18
+python-docx==1.1.0
+beautifulsoup4==4.12.2
+lxml==4.9.3
+html5lib==1.1
+
+# Database
+SQLAlchemy==2.0.23
+alembic==1.13.1
+sqlite3worker==1.1.7
+
+# Data Processing
+numpy>=1.26
+pandas>=2.2
+regex==2023.10.3
+
+# HTTP Requests
+aiohttp==3.9.1
+requests==2.31.0
+httpx==0.25.2
+
+# Configuration and Environment
+python-decouple==3.8
+python-dotenv==1.0.0
+pydantic==2.5.2
+
+# Caching and Storage
+redis==5.0.1
+diskcache==5.6.3
+
+# Progress Tracking and UI
+tqdm==4.66.1
+rich==13.7.0
+
+# Text Processing
+nltk==3.8.1
+textstat==0.7.3
+langdetect==1.0.9
+
+# Audio Effects and Enhancement
+librosa==0.10.1
+soundfile==0.12.1
+scipy==1.11.4
+
+# Music and Audio Generation (Optional)
+music21==9.1.0
+
+# Image Processing (for PDF with images)
+Pillow==10.1.0
+pdf2image==1.16.3
+
+# Logging and Monitoring
+structlog==23.2.0
+sentry-sdk==1.39.2
+
+# Date and Time Processing
+python-dateutil==2.8.2
+pytz==2023.3.post1
+
+# Utility Libraries
+click==8.1.7
+colorama==0.4.6
+psutil==5.9.6
+humanize==4.9.0
+
+# Testing (Development)
+pytest==7.4.3
+pytest-asyncio==0.21.1
+pytest-mock==3.12.0
+pytest-cov==4.1.0
+
+# Code Quality (Development)
+black==23.11.0
+isort==5.12.0
+flake8==6.1.0
+mypy==1.7.1
+
+# Type Hints
+types-requests==2.31.0.10
+types-redis==4.6.0.11
+
+# Security
+cryptography>=42.0
+bcrypt==4.1.2
+
+# Performance Monitoring
+memory-profiler==0.61.0
+
+# File System Operations
+watchdog==3.0.0
+send2trash==1.8.2
+
+# Network and API
+urllib3==2.1.0
+certifi==2023.11.17
+
+# Serialization
+msgpack==1.0.7
+orjson==3.9.10
+
+# Background Tasks
+celery==5.3.4
+redis==5.0.1
+
+# Development Tools
+ipython==8.18.1
+jupyter==1.0.0
+
+# Documentation
+sphinx==7.2.6
+sphinx-rtd-theme==2.0.0
